# EasyMocap

./: CLAUDE.md  pyproject.toml
config/vis3d/: o3d_scene.yml
easymocap/assignment/: associate.py
easymocap/socket/: base.py
easymocap/visualize/: o3dwrapper.py
src/easymocap/: __init__.py
