[project]
name = "easymocap"
version = "0.2.1"
description = "Easy Human Motion Capture Toolbox"
authors = [
    { name = "Qing Shuai", email = "s_q@zju.edu.cn" }
]
readme = "README.md"
requires-python = ">=3.10"
packages = [
    "easymocap",
    "easymocap.dataset",
    "easymocap.smplmodel",
    "easymocap.pyfitting",
    "easymocap.mytools",
    "easymocap.annotator",
    "easymocap.estimator",
    "myeasymocap"
]
dependencies = [
    "chumpy",
    "func-timeout>=4.3.5",
    "gdown>=5.2.0",
    "ipdb>=0.13.13",
    "joblib>=1.4.2",
    "mediapipe>=0.10.0",
    "opencv-python<4.10",
    "pytorch-lightning==1.5.0",
    "setuptools>=75.2.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.15",
    "termcolor>=2.5.0",
    "tqdm>=4.66.5",
    "ultralytics>=8.3.23",
    "yacs>=0.1.8",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/IntelligentSensingAndRehabilitation/chumpy" }

[project.scripts]
emc = "apps.mocap.run:main_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
